like_train/Bazel_Build/dist_py3/BazelBuildParser.py
# Generated from BazelBuild.g4 by ANTLR 4.9
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BazelBuildParser ( Parser ):

    grammarFileName = "BazelBuild.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'load'", "'exports_files'", 
                     "'workspace'", "'licenses'", "'package_group'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'('", "')'", 
                     "','", "'='", "'['", "']'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "STRING", "LOAD", "EXPORTS", "WORKSPACE", 
                      "LICENSES", "PACKAGE_GROUP", "NEWLINE", "NAME", "STRING_LITERAL", 
                      "BYTES_LITERAL", "OPEN_PAREN", "CLOSE_PAREN", "COMMA", 
                      "ASSIGN", "OPEN_BRACK", "CLOSE_BRACK", "OPEN_BRACE", 
                      "CLOSE_BRACE", "SKIP_", "UNKNOWN_CHAR" ]

    RULE_prog = 0
    RULE_stat = 1
    RULE_target_exp = 2
    RULE_attr_list = 3
    RULE_assign_exp = 4
    RULE_value_exp = 5
    RULE_key_word = 6
    RULE_arglist = 7
    RULE_argument = 8

    ruleNames =  [ "prog", "stat", "target_exp", "attr_list", "assign_exp", 
                   "value_exp", "key_word", "arglist", "argument" ]

    EOF = Token.EOF
    STRING=1
    LOAD=2
    EXPORTS=3
    WORKSPACE=4
    LICENSES=5
    PACKAGE_GROUP=6
    NEWLINE=7
    NAME=8
    STRING_LITERAL=9
    BYTES_LITERAL=10
    OPEN_PAREN=11
    CLOSE_PAREN=12
    COMMA=13
    ASSIGN=14
    OPEN_BRACK=15
    CLOSE_BRACK=16
    OPEN_BRACE=17
    CLOSE_BRACE=18
    SKIP_=19
    UNKNOWN_CHAR=20

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(BazelBuildParser.EOF, 0)

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BazelBuildParser.StatContext)
            else:
                return self.getTypedRuleContext(BazelBuildParser.StatContext,i)


        def getRuleIndex(self):
            return BazelBuildParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = BazelBuildParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 21
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BazelBuildParser.STRING) | (1 << BazelBuildParser.LOAD) | (1 << BazelBuildParser.EXPORTS) | (1 << BazelBuildParser.WORKSPACE) | (1 << BazelBuildParser.LICENSES) | (1 << BazelBuildParser.PACKAGE_GROUP) | (1 << BazelBuildParser.NAME))) != 0):
                self.state = 18
                self.stat()
                self.state = 23
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 24
            self.match(BazelBuildParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def key_word(self):
            return self.getTypedRuleContext(BazelBuildParser.Key_wordContext,0)


        def OPEN_PAREN(self):
            return self.getToken(BazelBuildParser.OPEN_PAREN, 0)

        def arglist(self):
            return self.getTypedRuleContext(BazelBuildParser.ArglistContext,0)


        def CLOSE_PAREN(self):
            return self.getToken(BazelBuildParser.CLOSE_PAREN, 0)

        def target_exp(self):
            return self.getTypedRuleContext(BazelBuildParser.Target_expContext,0)


        def STRING(self):
            return self.getToken(BazelBuildParser.STRING, 0)

        def getRuleIndex(self):
            return BazelBuildParser.RULE_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat" ):
                listener.enterStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat" ):
                listener.exitStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat" ):
                return visitor.visitStat(self)
            else:
                return visitor.visitChildren(self)




    def stat(self):

        localctx = BazelBuildParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stat)
        try:
            self.state = 33
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BazelBuildParser.LOAD, BazelBuildParser.EXPORTS, BazelBuildParser.WORKSPACE, BazelBuildParser.LICENSES, BazelBuildParser.PACKAGE_GROUP]:
                self.enterOuterAlt(localctx, 1)
                self.state = 26
                self.key_word()
                self.state = 27
                self.match(BazelBuildParser.OPEN_PAREN)
                self.state = 28
                self.arglist()
                self.state = 29
                self.match(BazelBuildParser.CLOSE_PAREN)
                pass
            elif token in [BazelBuildParser.NAME]:
                self.enterOuterAlt(localctx, 2)
                self.state = 31
                self.target_exp()
                pass
            elif token in [BazelBuildParser.STRING]:
                self.enterOuterAlt(localctx, 3)
                self.state = 32
                self.match(BazelBuildParser.STRING)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Target_expContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(BazelBuildParser.NAME, 0)

        def OPEN_PAREN(self):
            return self.getToken(BazelBuildParser.OPEN_PAREN, 0)

        def attr_list(self):
            return self.getTypedRuleContext(BazelBuildParser.Attr_listContext,0)


        def CLOSE_PAREN(self):
            return self.getToken(BazelBuildParser.CLOSE_PAREN, 0)

        def getRuleIndex(self):
            return BazelBuildParser.RULE_target_exp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTarget_exp" ):
                listener.enterTarget_exp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTarget_exp" ):
                listener.exitTarget_exp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTarget_exp" ):
                return visitor.visitTarget_exp(self)
            else:
                return visitor.visitChildren(self)




    def target_exp(self):

        localctx = BazelBuildParser.Target_expContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_target_exp)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35
            self.match(BazelBuildParser.NAME)
            self.state = 36
            self.match(BazelBuildParser.OPEN_PAREN)
            self.state = 37
            self.attr_list()
            self.state = 38
            self.match(BazelBuildParser.CLOSE_PAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attr_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign_exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BazelBuildParser.Assign_expContext)
            else:
                return self.getTypedRuleContext(BazelBuildParser.Assign_expContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BazelBuildParser.COMMA)
            else:
                return self.getToken(BazelBuildParser.COMMA, i)

        def getRuleIndex(self):
            return BazelBuildParser.RULE_attr_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttr_list" ):
                listener.enterAttr_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttr_list" ):
                listener.exitAttr_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttr_list" ):
                return visitor.visitAttr_list(self)
            else:
                return visitor.visitChildren(self)




    def attr_list(self):

        localctx = BazelBuildParser.Attr_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_attr_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BazelBuildParser.NAME:
                self.state = 40
                self.assign_exp()
                self.state = 45
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==BazelBuildParser.COMMA:
                    self.state = 41
                    self.match(BazelBuildParser.COMMA)
                    self.state = 42
                    self.assign_exp()
                    self.state = 47
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Assign_expContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(BazelBuildParser.NAME, 0)

        def ASSIGN(self):
            return self.getToken(BazelBuildParser.ASSIGN, 0)

        def value_exp(self):
            return self.getTypedRuleContext(BazelBuildParser.Value_expContext,0)


        def getRuleIndex(self):
            return BazelBuildParser.RULE_assign_exp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign_exp" ):
                listener.enterAssign_exp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign_exp" ):
                listener.exitAssign_exp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign_exp" ):
                return visitor.visitAssign_exp(self)
            else:
                return visitor.visitChildren(self)




    def assign_exp(self):
